--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,33 @@
-# Environment variables
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Node modules
-node_modules
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Logs
+# Testing
+/coverage
+
+# Next.js build output
+/.next
+/out
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/generated/prisma
+# Local Environment Variables
+.env*.local
+.env
+
+# AppleDouble files
+._*
+*~
